nautilus/desktop.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: djrhee-lidarflow # Change this to your djrhee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: djrhee-lidarflow # Change this to your djrhee
  template:
    metadata:
      labels:
        app: djrhee-lidarflow # Change this to your djrhee
    spec:
      hostname: djrhee-lidarflow # Change this to your djrhee
      containers:
      - name: djrhee-lidarflow # Change this to your djrhee
        image: ghcr.io/selkies-project/nvidia-glx-desktop:24.04-20240924062704
        stdin: true
        tty: true
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 2Gi
            cpu: "1"
            nvidia.com/gpu: 0
            ephemeral-storage: 35Gi
          requests:
            memory: 2Gi
            cpu: "1"
            nvidia.com/gpu: 0
            ephemeral-storage: 35Gi
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /cache
          name: cache-vol
        - mountPath: /home/ubuntu/persistent
          name: root-vol
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 8.8.8.8
        - 8.8.4.4
      volumes:
      - name: dshm
        emptyDir: {}
      - name: cache-vol
        persistentVolumeClaim:
          claimName: djrhee-lidarflow-cache # Change this to your djrhee
      - name: root-vol
        persistentVolumeClaim:
          claimName: lidarflow-challenge #argoverse-challenge-v2 # Change this to your djrhee
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: NotIn
                values:
                - ucsd-suncave
